# embr

./: .clang-format  CMakeLists.txt  README.md  pitch.md
bench/: bench.md  tcp_loopback.sh  tcp_wan.sh
src/: main.cpp
src/bench/: latency.cpp  latency.hpp
src/cli/: bench.cpp  bench.hpp  latency.cpp  pull_cli.cpp  pull_cli.hpp  push_cli.cpp  trust_cli.cpp  trust_cli.hpp
src/core/: chunk_manager.cpp  chunk_manager.hpp  hash.cpp  hash.hpp  partial_file.cpp  partial_file.hpp  protocol.cpp  protocol.hpp  pull.cpp  pull.hpp  push.cpp  push.hpp
src/tracker/: token_store.cpp  token_store.hpp  tracker_client.cpp  tracker_client.hpp  tracker_handlers.cpp  tracker_handlers.hpp  tracker_server.cpp  tracker_server.hpp
src/transport/: quic_client.cpp  quic_client.hpp  quic_transport.cpp  quic_transport.hpp  tcp_client.cpp  tcp_client.hpp  tcp_server.cpp  tcp_server.hpp  tcp_transport.cpp  tcp_transport.hpp  transport.hpp  udp_bind.cpp  udp_bind.hpp  udp_connect.cpp  udp_connect.hpp  udp_data_client.cpp  udp_data_client.hpp  udp_data_server.cpp  udp_data_server.hpp  udp_transport.hpp
src/util/: config_tracker.hpp  constants.hpp  exact_io.hpp  io.hpp  io_uring_ctx.cpp  io_uring_ctx.hpp  json_parser.hpp  socket_fd.hpp
tests/: CMakeLists.txt  echo_test.cpp  test_hash_parallel.cpp  test_hash_parallel.h  test_protocol.cpp  test_resume.cpp  test_tcp.cpp  test_tracker.cpp  test_udp.cpp
